# vws-python

./: .appveyor.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .pydocstyle  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  codecov.yaml  conftest.py  dev-requirements.txt  doc8.ini  issue.txt  lint.mk  mypy.ini  package.json  pylintrc  pyproject.toml  pytest.ini  readthedocs.yaml  requirements.txt  secrets.tar.enc  setup.cfg  setup.py  spelling_private_dict.txt  tests-pylintrc  vuforia_secrets.env.example  zizmor.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-merge.yml  lint.yml  publish-site.yml  release.yml  rtd.yml  windows-ci.yml
admin/: release.py  release.sh
ci/: custom_linters.py  run_script.py  set_secrets_file.py
docs/: Makefile  make.bat
docs/source/: __init__.py  api-reference.rst  conf.py  contributing.rst  exceptions.rst  index.rst  release-process.rst  unreleased.rst
mock_vws/: __init__.py
newsfragments/: 3090.change.rst  3091.change.rst  3092.change.rst  3093.change.rst
requirements/: dev-requirements.txt  setup-requirements.txt
src/common/: __init__.py  constants.py
src/mock_vws/: __init__.py  _constants.py  _mock.py  _mock_common.py  _mock_web_query_api.py  _mock_web_services_api.py  _validators.py
src/mock_vws/resources/: match_processing_response
src/vws/: __init__.py  _async_vws_request.py  _authorization.py  _generate_exceptions.py  _image_utils.py  _query_common.py  _request_utils.py  _result_codes.py  _version.py  _vws_common.py  _vws_request.py  _wait_for_target_processed.py  async_query.py  async_vumark_service.py  async_vws.py  exceptions.py  include_target_data.py  query.py  reports.py  response.py  transports.py  types.py  vumark_accept.py  vumark_service.py  vws.py
src/vws/exceptions/: __init__.py  base_exceptions.py  cloud_reco_exceptions.py  custom_exceptions.py  response.py  vws_exceptions.py
tests/: __init__.py  conftest.py  test_add_target.py  test_async_cloud_reco_exceptions.py  test_async_query.py  test_async_vws.py  test_async_vws_exceptions.py  test_cloud_reco_exceptions.py  test_database_summary.py  test_delete_target.py  test_example.py  test_exceptions.py  test_get_database_summary_report.py  test_get_target.py  test_get_target_record.py  test_get_target_summary_report.py  test_meta.py  test_query.py  test_request_utils.py  test_target_list.py  test_target_summary.py  test_transports.py  test_unknown_target.py  test_update_target.py  test_vws.py  test_vws_exceptions.py  test_wait_for_target_processed.py  utils.py
tests/fixtures/: images.py
tests/mock_vws/: __init__.py  conftest.py  prepared_request_fixtures.py  test_add_target.py  test_authorization_header.py  test_database_summary.py  test_date_header.py  test_delete_target.py  test_get_duplicates.py  test_get_target.py  test_inactive_project.py  test_invalid_given_id.py  test_invalid_json.py  test_query.py  test_target_list.py  test_target_summary.py  test_test_utils.py  test_unexpected_headers.py  test_unexpected_json.py  test_update_target.py  test_usage.py  utils.py
tests/mock_vws/fixtures/: __init__.py  credentials.py  images.py  prepared_requests.py
tests/mock_vws/test_update_target/: test_active_flag.py  test_application_metadata.py  test_image.py  test_success.py  test_target_name.py  test_unexpected_data.py  test_width.py
tests/mock_vws/utils/: __init__.py  assertions.py  authorization.py
tests/test_exceptions/: __init__.py  test_image_too_large.py  test_request_quota_reached.py  test_unknown_target.py
tests/vws/: __init__.py  test_request_utils.py
