[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm>=8.1.0",
]

[project]
name = "vws-python"
description = "Interact with the Vuforia Web Services (VWS) API."
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [
    "client",
    "vuforia",
    "vws",
]
license = "MIT"
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "beartype>=0.22.9",
    "httpx>=0.28.0",
    "requests>=2.32.3",
    "urllib3>=2.2.3",
    "vws-auth-tools>=2024.7.12",
]
optional-dependencies.dev = [
    "actionlint-py==1.7.12.24",
    "check-manifest==0.51",
    "deptry==0.25.1",
    "doc8==2.0.0",
    "doccmd==2026.7.19",
    "freezegun==1.5.5",
    "furo==2025.12.19",
    "interrogate==1.7.0",
    "mypy[faster-cache]==2.3.0",
    "mypy-strict-kwargs==2026.7.19.1",
    "prek==0.4.10",
    "pydocstringformatter==1.0.0",
    "pydocstyle==6.3",
    "pygments==2.20.0",
    "pylint[spelling]==4.0.6",
    "pylint-per-file-ignores==3.2.1",
    "pyproject-fmt==2.25.3",
    "pyrefly==1.1.1",
    "pyright==1.1.411",
    "pyroma==5.0.1",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-beartype-tests==2026.4.26",
    "pytest-cov==7.1.0",
    "pyyaml==6.0.3",
    "ruff==0.15.22",
    # We add shellcheck-py not only for shell scripts and shell code blocks,
    # but also because having it installed means that ``actionlint-py`` will
    # use it to lint shell commands in GitHub workflow files.
    "shellcheck-py==0.11.0.1",
    "shfmt-py==4.0.0",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.6.17",
    "sphinxcontrib-spelling==8.0.2",
    # ``sphinxcontrib-towncrier`` renders unreleased news fragments
    # into docs/source/unreleased.rst during Sphinx builds.
    "sphinxcontrib-towncrier==0.5.0a0",
    "strict-kwargs==2026.6.8.post1",
    "sybil==10.1.0",
    # Listed explicitly (despite being transitive via vws-python-mock) so that
    # [tool.uv.sources] can redirect to the CPU-only PyTorch index.
    # See: https://vws-python.github.io/vws-python-mock/installation.html#faster-installation
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "towncrier==25.8.0",
    "ty==0.0.62",
    "types-requests==2.33.0.20260712",
    "vulture==2.16",
    "vws-python-mock==2026.2.22.3",
    "vws-test-fixtures==2023.3.5",
    "yamlfix==1.19.1",
    "zizmor==1.27.0",
]
optional-dependencies.release = [ "check-wheel-contents==0.6.3", "towncrier==25.8.0" ]
urls.Documentation = "https://vws-python.github.io/vws-python/"
urls.Source = "https://github.com/VWS-Python/vws-python"

[dependency-groups]
dev = []

[tool.setuptools]
packages.find.where = [
    "src",
]
package-data.vws = [
    "py.typed",
]
zip-safe = false

[tool.setuptools_scm]
# This keeps the start of the version the same as the last release.
# This is useful for our documentation to include e.g. binary links
# to the latest released binary.
#
# Code to match this is in ``conf.py``.
version_scheme = "post-release"

[tool.uv]
sources.torch = { index = "pytorch-cpu" }
sources.torchvision = { index = "pytorch-cpu" }
index = [ { name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", explicit = true } ]

[tool.ruff]
line-length = 79
lint.select = [
    "ALL",
]
lint.ignore = [
    # Ruff warns that this conflicts with the formatter.
    "COM812",
    # Allow our chosen docstring line-style - pydocstringformatter handles formatting
    # but doesn't enforce D205 (blank line after summary) or D212 (summary on first line).
    "D205",
    "D212",
    # Ruff warns that this conflicts with the formatter.
    "ISC001",
    # Ignore 'too-many-*' errors as they seem to get in the way more than
    # helping.
    "PLR0913",
]
lint.per-file-ignores."doccmd_*.py" = [
    # Allow asserts in docs.
    "S101",
]
lint.per-file-ignores."docs/source/*.py" = [
    # Allow asserts in docs.
    "S101",
]
lint.per-file-ignores."tests/*.py" = [
    # Allow asserts in tests.
    "S101",
]
# Do not automatically remove commented out code.
# We comment out code during development, and with VSCode auto-save, this code
# is sometimes annoyingly removed.
lint.unfixable = [
    "ERA001",
]
lint.flake8-tidy-imports.banned-api."typing.cast".msg = "typing.cast is banned: use explicit type narrowing or a typed variable instead."
lint.pydocstyle.convention = "google"

[tool.pylint]
# Disable the message, report, category or checker with the given id(s). You
# can either give multiple identifiers separated by comma (,) or put this
# option multiple times (only on the command line, not in the configuration
# file where it should appear only once).You can also use "--disable=all" to
# disable everything first and then reenable specific checks. For example, if
# you want to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use"--disable=all --enable=classes
# --disable=W"
"MESSAGES CONTROL".disable = [
    # Too difficult to please
    "duplicate-code",
    # Let ruff handle long lines
    "line-too-long",
    "locally-disabled",
    "missing-return-type-doc",
    # We don't need everything to be documented because of mypy
    "missing-type-doc",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    # Let ruff deal with sorting
    "ungrouped-imports",
    # Let ruff handle unused imports
    "unused-import",
    # mypy does not want untyped parameters.
    "useless-type-doc",
    # Let ruff handle imports
    "wrong-import-order",
]
# Enable the message, report, category or checker with the given id(s). You can
# either give multiple identifier separated by comma (,) or put this option
# multiple time (only on the command line, not in the configuration file where
# it should appear only once). See also the "--disable" option for examples.
"MESSAGES CONTROL".enable = [
    "bad-inline-option",
    "deprecated-pragma",
    "file-ignored",
    "spelling",
    "use-symbolic-message-instead",
    "useless-suppression",
]
# We ignore invalid names because:
# - We want to use generated module names, which may not be valid, but are never seen.
# - We want to use global variables in documentation, which may not be uppercase.
# - conf.py is a Sphinx configuration file which requires lowercase global variable names.
"MESSAGES CONTROL".per-file-ignores = [
    "docs/source/conf.py:invalid-name",
    "docs/source/doccmd_*.py:invalid-name",
    "docs/source/doccmd_*/*.py:invalid-name",
    "doccmd_README_rst_*.py:invalid-name",
    "doccmd_*/*.py:invalid-name",
]
DEPRECATED_BUILTINS.bad-functions = [
    # Use Pylint until Ruff can ban bare builtin calls, or until custom rules
    # make this removable:
    # https://github.com/astral-sh/ruff/issues/10079
    # https://github.com/astral-sh/ruff/issues/970
    "filter",
    "getattr",
    "hasattr",
    "map",
    "setattr",
]
# Allow the body of an if to be on the same line as the test if there is no
# else.
FORMAT.single-line-if-stmt = false
# Return non-zero exit code if useless-suppression is emitted.
MAIN.fail-on = [
    "useless-suppression",
]
# Use multiple processes to speed up Pylint.
MASTER.jobs = 0
# List of plugins (as comma separated values of python modules names) to load,
# usually to register additional checkers.
# See https://chezsoi.org/lucas/blog/pylint-strict-base-configuration.html.
# and we also add `pylint_per_file_ignores` to allow per-file ignores.
# We do not use the plugins:
# - pylint.extensions.code_style
# - pylint.extensions.magic_value
# - pylint.extensions.while_used
# as they seemed to get in the way.
MASTER.load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.docparams",
    "pylint.extensions.dunder",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.mccabe",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint_per_file_ignores",
]
# Pickle collected data for later comparisons.
MASTER.persistent = true
# Allow loading of arbitrary C extensions. Extensions are imported into the
# active Python interpreter and may run arbitrary code.
MASTER.unsafe-load-any-extension = false
# Spelling dictionary name. Available dictionaries: none. To make it working
# install python-enchant package.
SPELLING.spelling-dict = "en_US"
# A path to a file that contains private dictionary; one word per line.
SPELLING.spelling-private-dict-file = "spelling_private_dict.txt"
# Tells whether to store unknown words to indicated private dictionary in
# --spelling-private-dict-file option instead of raising a message.
SPELLING.spelling-store-unknown-words = "no"

[tool.interrogate]
fail-under = 100
verbose = 2
omit-covered-files = true

[tool.check-manifest]
ignore = [
    "*.enc",
    ".checkmake-config.ini",
    ".git_archival.txt",
    ".pre-commit-config.yaml",
    ".prettierrc",
    ".yamlfmt",
    "CHANGELOG.rst",
    "ci",
    "ci/**",
    "CODE_OF_CONDUCT.rst",
    "CONTRIBUTING.rst",
    "doc8.ini",
    "docs",
    "docs/**",
    "LICENSE",
    "lint.mk",
    "Makefile",
    "newsfragments",
    "newsfragments/**",
    "spelling_private_dict.txt",
    "tests",
    "tests-pylintrc",
    "tests/**",
    "vuforia_secrets.env.example",
    "zizmor.yml",
]

[tool.deptry]
# torch and torchvision are listed explicitly in dev deps to allow
# [tool.uv.sources] to redirect them to the CPU-only PyTorch index,
# but they are not directly imported in the vws-python source code.
per_rule_ignores.DEP002 = [
    "torch",
    "torchvision",
]
optional_dependencies_dev_groups = [
    "dev",
    "release",
]

[tool.vulture]
# Duplicate some of .gitignore
exclude = [ ".venv" ]
# Ideally we would limit the paths to the source code where we want to ignore names,
# but Vulture does not enable this.
ignore_names = [
    # Public API classes imported by users from vws.transports
    "AsyncHTTPXTransport",
    # Sphinx
    "autoclass_content",
    "autoclass_content",
    "autodoc_member_order",
    "copybutton_exclude",
    "extensions",
    # pytest fixtures - we name fixtures like this for this purpose
    "fixture_*",
    "html_show_copyright",
    "html_show_sourcelink",
    "html_show_sphinx",
    "html_theme",
    "html_theme_options",
    "html_title",
    "htmlhelp_basename",
    "HTTPXTransport",
    "intersphinx_mapping",
    "language",
    "linkcheck_ignore",
    "linkcheck_retries",
    "master_doc",
    "nitpick_ignore",
    "nitpicky",
    "project_copyright",
    "pygments_style",
    # pytest configuration
    "pytest_collect_file",
    "pytest_plugins",
    "rst_prolog",
    "source_suffix",
    "spelling_word_list_filename",
    "templates_path",
    "towncrier_draft_autoversion_mode",
    "towncrier_draft_include_empty",
    "towncrier_draft_working_directory",
    "warning_is_error",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
files = [ "." ]
exclude = [ "build" ]
follow_untyped_imports = true
strict = true
plugins = [
    "mypy_strict_kwargs",
]

[tool.pyrefly]
errors.non-exhaustive-match = "error"

[tool.pyright]
typeCheckingMode = "strict"
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true

[tool.pytest]
log_cli = true
xfail_strict = true

[tool.coverage]
run.branch = true
report.exclude_also = [
    "if TYPE_CHECKING:",
]
report.show_missing = true

[tool.towncrier]
# The changelog and the per-release GitHub release notes are both built
# from news fragments under ``newsfragments/``.  The release workflow
# runs ``towncrier build`` to assemble them; contributors add one
# fragment file per user-facing change.
directory = "newsfragments"
filename = "CHANGELOG.rst"
# Custom template so an assembled version reproduces the historical
# style exactly: a bare ``<version>`` heading (no project name, no
# date) followed by a flat bullet list with no per-type sub-headings.
template = "docs/towncrier_template.rst.jinja"
title_format = "{version}"
issue_format = "#{issue}"
# ``title_format`` underline first, then any nested headings.  A bare
# version such as ``2026.05.18`` underlined with ``-`` matches every
# pre-towncrier entry in CHANGELOG.rst.
underlines = [ "-", "~", "^" ]
type = [
    # A single, unnamed fragment type keeps the assembled output as one
    # flat bullet list, matching the historical changelog (which never
    # grouped entries under "Features"/"Bugfixes"/... sub-headings).
    { directory = "change", name = "", showcontent = true },
]

[tool.pydocstringformatter]
write = true
split-summary-body = false
# Use a lower line length than ruff (79) to avoid conflicts with D200 -
# pydocstringformatter would otherwise split docstrings at exactly 79 chars
# which ruff considers should stay on one line.
max-line-length = 75
linewrap-full-docstring = true

[tool.doc8]
max_line_length = 2000
ignore_path = [
    "./.eggs",
    "./docs/build",
    "./docs/build/spelling/output.txt",
    "./node_modules",
    "./src/*.egg-info/",
    "./src/*/_setuptools_scm_version.txt",
]

[tool.yamlfix]
section_whitelines = 1
whitelines = 1
