[check-manifest]
ignore =
    *.enc
    .coveragerc
    .isort.cfg
    .markdownlint.json
    .pydocstyle
    .remarkrc
    .readthedocs.yml
    .style.yapf
    .travis.yml
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst
    CONTRIBUTING.rst
    LICENSE
    Makefile
    ci
    ci/*
    codecov.yaml
    dev-requirements.txt
    doc8.ini
    docs
    docs/*
    mypy.ini
    pylintrc
    pytest.ini
    requirements.txt
    spelling_private_dict.txt
    tests
    tests-pylintrc
    tests/*
    vuforia_secrets.env.example

[flake8]
exclude=./versioneer.py,
        ./src/vws/_version.py,
        ./build/,

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = src/vws/_version.py
versionfile_build = vws/_version.py
tag_prefix =
parentdir_prefix = vws

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
no_implicit_optional = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[mypy-vws/_version]
ignore_errors = True

[pydocstyle]
# No summary lines
#   - D200
#   - D205
#   - D400
# We don't want blank lines before class docstrings
#   - D203
# We don't need docstrings to start at the first line
#   - D212
# Allow blank lines after function docstrings
#   - D202
# Section names do not need to end in newlines
#	- D406
# Section names do not need dashed underlines
# 	- D407
# No blank line is needed after the last section
ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413
match = match='(?!_vendor).*\.py'
