[check-manifest]
ignore =
    *.enc
    setup-requirements.txt
    .appveyor.yml
    .coveragerc
    .isort.cfg
    .markdownlint.json
    .pydocstyle
    .remarkrc
    .readthedocs.yml
    readthedocs.yaml
    .style.yapf
    .travis.yml
    admin
    admin/**
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst
    CONTRIBUTING.rst
    LICENSE
    Makefile
    ci
    ci/**
    codecov.yaml
    doc8.ini
    docs
    docs/**
    .git_archival.txt
    mypy.ini
    pylintrc
    pytest.ini
    spelling_private_dict.txt
    tests
    tests-pylintrc
    tests/**
    vuforia_secrets.env.example
    lint.mk

[flake8]
exclude=./.eggs,
        ./build/,

[bdist_wheel]
universal = 1

[doc8]
max-line-length = 2000
ignore-path = ./src/*.egg-info/SOURCES.txt,./docs/build/spelling/output.txt,./.eggs,src/*/_setuptools_scm_version.txt

[tool:pytest]
xfail_strict=true
log_cli=true

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_decorators = False
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
no_implicit_optional = True
strict_equality = True
strict_optional = True
warn_no_return = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True
warn_unused_ignores = True

[pydocstyle]
# No summary lines
#   - D200
#   - D205
#   - D400
#   - D415
# We don't want blank lines before class docstrings
#   - D203
# We don't need docstrings to start at the first line
#   - D212
# Allow blank lines after function docstrings
#   - D202
# Section names do not need to end in newlines
#   - D406
# Section names do not need dashed underlines
#   - D407
# No blank line is needed after the last section
# Do not care about imperative mood
#   - D401
ignore = D200,D202,D203,D205,D212,D400,D406,D407,D413,D401,D415

[isort]
multi_line_output=3
include_trailing_comma=true

[coverage:run]
branch = True

[yapf]
DEDENT_CLOSING_BRACKETS = true
BLANK_LINE_BEFORE_NESTED_CLASS_OR_DEF = true

[metadata]
name = VWS Python
description = Interact with the Vuforia Web Services (VWS) API.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia client
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://vws-python.readthedocs.io
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
vws =
    py.typed
