[flake8]
exclude=./.eggs,
        ./build/,

[bdist_wheel]
universal = 1

[doc8]
max-line-length = 2000
ignore-path = ./src/*.egg-info/SOURCES.txt,./docs/build/spelling/output.txt,./.eggs,src/*/_setuptools_scm_version.txt

[metadata]
name = VWS Python
description = Interact with the Vuforia Web Services (VWS) API.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia client
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://vws-python.readthedocs.io
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
vws =
    py.typed
